# SMIXS

./: README.md  example.jl
julia/src/: SMIXS.jl  SMIXSSharedFunctions.jl  dataGenerator.jl  fitSMIXS.jl
python/: example.py  setup.cfg
python/smixs/: SMIXSHelper.py  __init__.py
python/src/: DataGenerator.py  SMIXS.py  SMIXSHelper.py
src/: SMIXSSharedFunctions.jl
